--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
             Quisque eget pretium leo, eu rutrum eros. Morbi non mauris sed nibh laoreet consectetur. Morbi posuere tempor elementum. Aenean accumsan vitae est ac blandit. Suspendisse magna ipsum, dapibus eget faucibus ac, vehicula id diam. Morbi vulputate enim vel tempor dapibus. Fusce tempus arcu a egestas commodo. Suspendisse sit amet suscipit ipsum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Ut aliquet congue velit eget maximus. Etiam eu ullamcorper purus. Aliquam tincidunt ultrices eleifend. Nam bibendum tempor quam, non fringilla risus convallis sit amet. Duis id tincidunt nisi, at semper nisi.
             Morbi felis augue, placerat eget fermentum quis, malesuada eu velit. In vitae pellentesque quam. Praesent ac suscipit enim. In et leo vel odio venenatis imperdiet. Aenean sit amet turpis ac nibh volutpat egestas dictum nec sapien. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam quis turpis id purus rutrum tincidunt vitae a augue. Vestibulum ac ante accumsan eros tincidunt maximus et nec libero. Interdum et malesuada fames ac ante ipsum primis in faucibus.
         </div>
+
+        <button onclick="javascript:window.print()" >Imprimir</button>
     </body>
 </html>
